--- a/tutorial/about.html
+++ b/tutorial/about.html
@@ -22,7 +22,7 @@ limitations under the License.
     <title>About</title>
     <meta name="flags" content="dom">
     <meta name="tutorial" content="Web Animations tutorials">
-    <link rel="stylesheet" type="text/css" href="tutorialStyle.css">
+    <link rel="stylesheet" type="text/css" href="tutorial-style.css">
   </head>
   <body>
     <ul class="topMenu">
