--- a/tutorial/basic-animations/basic-animation-exercise-1.html
+++ b/tutorial/basic-animations/basic-animation-exercise-1.html
@@ -34,7 +34,7 @@ specific language governing permissions and limitations under the License.
   "300px"}, 2);</code>
 
   <div id="hideLabel" onclick="toggleSolution()">Show Solution</div> 
-  <div <id="toggleText" class="codeSamples">
+  <div id="toggleText" class="codeSamples">
     <code>new Animation(document.querySelector("#a"), {left: "300px"}, 2);</code>
   </div>
 
