fixed link to css style in reference pages

--- a/tutorial/references/newAnimation.html
+++ b/tutorial/references/newAnimation.html
@@ -22,7 +22,7 @@ limitations under the License.
     <title>new Animation()</title>
     <meta name="flags" content="dom">
     <meta name="tutorial" content="Web Animations tutorials">
-    <link rel="stylesheet" type="text/css" href="../tutorialStyle.css">
+    <link rel="stylesheet" type="text/css" href="../tutorial-style.css">
   </head>
 
   <body>
