--- a/tutorial/parallel/parallel-exercise-1.html
+++ b/tutorial/parallel/parallel-exercise-1.html
@@ -29,7 +29,7 @@ limitations under the License.
     get started on the exercise</p>
 
   <p class="description">In this exercise, create a parallel group 
-    of animation that has 3 children. Each children should run 300px, 
+    of animation that has 3 different animations. Each children should run 300px, 
     500px, 700px from top respectively for 5 seconds.</p>
 
   <p class="description">Hint: you should first create the children then 
