--- a/tutorial/references/references.html
+++ b/tutorial/references/references.html
@@ -16,205 +16,202 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="author" title="Sandy Phan, Sarah Heimlich", href="mailto:sandyphan@google.com, sarahheimlich@google.com">
-    <title>Create Basic Animation</title>
-    <meta name="flags" content="dom">
-    <meta name="tutorial" content="Web Animations tutorials">
-    <link rel="stylesheet" type="text/css" href="../tutorial-style.css">
-  </head>
 
-  <body>
-    <ul class="topMenu">
-      <li><a href="../home-page.html">Home</a></li>
-      <li><a href="#">Tutorials</a>
-        <ul class="subMenu">
-          <li><a href="../basic-animations/basic-animation.html">Basic Animations</a></li>
-          <li><a href="../parallel/parallel.html">Parallel Animations</a></li>
-          <li><a href="../sequence/sequence.html">Sequence Animations</a></li>
-          <li><a href="../timing-dictionary/timing-dictionary.html">Timing Dictionary</a></li>
-          <li><a href="../timing-functions/timing-function.html">Timing Functions</a></li>
-        </ul>
-      </li>
-      <li><a href="references.html">References</a></li>
-      <li><a href="../about.html">About</a></li>
+<link rel="author" title="Sandy Phan, Sarah Heimlich", 
+  href="mailto:sandyphan@google.com, sarahheimlich@google.com">
+<title>Create Basic Animation</title>
+<meta name="flags" content="dom">
+<meta name="tutorial" content="Web Animations tutorials">
+<link rel="stylesheet" type="text/css" href="../tutorial-style.css">
+<script type="text/javascript" src="../jquery.js"></script>
+<script type="text/javascript" src="../page-load.js"></script>
+
+<ul class="topMenu">
+  <li><a href="../home-page.html">Home</a></li>
+  <li><a href="#">Tutorials</a>
+    <ul class="subMenu">
+      <li><a href="../basic-animations/basic-animation.html">Basic Animations</a></li>
+      <li><a href="../parallel/parallel.html">Parallel Animations</a></li>
+      <li><a href="../sequence/sequence.html">Sequence Animations</a></li>
+      <li><a href="../timing-dictionary/timing-dictionary.html">Timing Dictionary</a></li>
+      <li><a href="../timing-functions/timing-function.html">Timing Functions</a></li>
+    </ul>
+  </li>
+  <li><a href="references.html">References</a></li>
+  <li><a href="../about.html">About</a></li>
+</ul>
+
+<div id="main">
+
+  <div id="title">Web Animations Tutorial</div>
+
+  <div class="line-separator"></div>
+
+  <div class="content">
+
+    <ul id="alphabet-menu">
+      <li><a href="#a">A</a></li>
+      <li><a href="#b">B</a></li>
+      <li><a href="#c">C</a></li>
+      <li><a href="#d">D</a></li>
+      <li><a href="#e">E</a></li>
+      <li><a href="#f">F</a></li>
+      <li><a href="#g">G</a></li>
+      <li><a href="#h">H</a></li>
+      <li><a href="#i">I</a></li>
+      <li><a href="#j">J</a></li>
+      <li><a href="#k">K</a></li>
+      <li><a href="#l">L</a></li>
+      <li><a href="#m">M</a></li>
+      <li><a href="#n">N</a></li>
+      <li><a href="#o">O</a></li>
+      <li><a href="#p">P</a></li>
+      <li><a href="#q">Q</a></li>
+      <li><a href="#r">R</a></li>
+      <li><a href="#s">S</a></li>
+      <li><a href="#t">T</a></li>
+      <li><a href="#u">U</a></li>
+      <li><a href="#v">V</a></li>
+      <li><a href="#w">W</a></li>
+      <li><a href="#x">X</a></li>
+      <li><a href="#y">Y</a></li>
+      <li><a href="#z">Z</a></li>
     </ul>
 
-    <div id="main">
+    <br />
 
-      <div id="title">Web Animations Tutorial</div>
+    <div id="a" class="alphabet-title">A
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>animate()</li>
+      <li>AnimationEffect<li>
+    </ul>
 
-      <div class="line-separator"></div>
+    <div id="b" class="alphabet-title">B
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-      <div class="content">
+    <div id="c" class="alphabet-title">C
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>clone</li>
+      <li>CustomAnimationEffect</a></li>
+    </ul>
 
-        <ul id="alphabet-menu">
-          <li><a href="#a">A</a></li>
-          <li><a href="#b">B</a></li>
-          <li><a href="#c">C</a></li>
-          <li><a href="#d">D</a></li>
-          <li><a href="#e">E</a></li>
-          <li><a href="#f">F</a></li>
-          <li><a href="#g">G</a></li>
-          <li><a href="#h">H</a></li>
-          <li><a href="#i">I</a></li>
-          <li><a href="#j">J</a></li>
-          <li><a href="#k">K</a></li>
-          <li><a href="#l">L</a></li>
-          <li><a href="#m">M</a></li>
-          <li><a href="#n">N</a></li>
-          <li><a href="#o">O</a></li>
-          <li><a href="#p">P</a></li>
-          <li><a href="#q">Q</a></li>
-          <li><a href="#r">R</a></li>
-          <li><a href="#s">S</a></li>
-          <li><a href="#t">T</a></li>
-          <li><a href="#u">U</a></li>
-          <li><a href="#v">V</a></li>
-          <li><a href="#w">W</a></li>
-          <li><a href="#x">X</a></li>
-          <li><a href="#y">Y</a></li>
-          <li><a href="#z">Z</a></li>
-        </ul>
+    <div id="d" class="alphabet-title">D
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>defaultPlaybackRate</li>
+      <li>direction</li>
+    </ul>
 
-        <br />
+    <div id="e" class="alphabet-title">E
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="a" class="alphabet-title">A
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li>animate()</li>
-          <li>AnimationEffect<li>
-        </ul>
+    <div id="f" class="alphabet-title">F
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>fillMode</li>
+    </ul>
 
-        <div id="b" class="alphabet-title">B
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="g" class="alphabet-title">G
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="c" class="alphabet-title">C
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li>clone</li>
-          <li>CustomAnimationEffect</a></li>
-        </ul>
+    <div id="h" class="alphabet-title">H
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="d" class="alphabet-title">D
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li>defaultPlaybackRate</li>
-          <li>direction</li>
-        </ul>
+    <div id="i" class="alphabet-title">I
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>iterationCount</li>
+      <li>iterationDuration</li>
+      <li>iterationStart</li>
+    </ul>
 
-        <div id="e" class="alphabet-title">E
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="j" class="alphabet-title">J
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="f" class="alphabet-title">F
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li>fillMode</li>
-        </ul>
+    <div id="k" class="alphabet-title">K
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="g" class="alphabet-title">G
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="l" class="alphabet-title">L
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>locallyPaused()</li>
+    </ul>
 
-        <div id="h" class="alphabet-title">H
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="m" class="alphabet-title">M
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="i" class="alphabet-title">I
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li><a href="iterationCount.html">iterationCount</a></li>
-          <li>iterationDuration</li>
-          <li><a href="iterationStart.html">iterationStart</a></li>
-        </ul>
-
-        <div id="j" class="alphabet-title">J
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-
-        <div id="k" class="alphabet-title">K
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-
-        <div id="l" class="alphabet-title">L
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li>locallyPaused()</li>
-        </ul>
-
-        <div id="m" class="alphabet-title">M
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-
-        <div id="n" class="alphabet-title">N
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li><a href="newAnimation.html">new Animation()</a></li>
-        </ul>
+    <div id="n" class="alphabet-title">N
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>new Animation()</li>
+    </ul>
 
 
-        <div id="o" class="alphabet-title">O
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="o" class="alphabet-title">O
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="p" class="alphabet-title">P
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li><a href="parGroup.html">ParGroup()</a></li>
-          <li>pause()</li>
-          <li>play()</li>
-          <li>playbackrate</li>
-        </ul>
+    <div id="p" class="alphabet-title">P
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>ParGroup()</li>
+      <li>pause()</li>
+      <li>play()</li>
+      <li>playbackrate</li>
+    </ul>
 
-        <div id="q" class="alphabet-title">Q
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="q" class="alphabet-title">Q
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="r" class="alphabet-title">R
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
+    <div id="r" class="alphabet-title">R
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
 
-        <div id="s" class="alphabet-title">S
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li><a href="seqGroup.html">SeqGroup()</a></li>
-          <li>startDelay</li>
-          <li>startTime</li>
-          <li><a href="StepTimingFunction.html">StepTimingFunction</a></li>
-        </ul>
+    <div id="s" class="alphabet-title">S
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>SeqGroup()</li>
+      <li>startDelay</li>
+      <li>startTime</li>
+      <li>StepTimingFunction</li>
+    </ul>
 
-        <div id="t" class="alphabet-title">T
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-          <li><a href="TimingDictionary.html">TimingDictionary</a></li>
-          <li>TimingFunction()</li>
-        </ul>
+    <div id="t" class="alphabet-title">T
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+      <li>TimingDictionary</li>
+      <li>TimingFunction()</li>
+    </ul>
 
-        <div id="u"class="alphabet-title">U
-          <div class="backToTop"><a href="#">Top</a></div>
-        </div>
-        <ul class="description">
-        </ul>
+    <div id="u"class="alphabet-title">U
+      <div class="backToTop"><a href="#">Top</a></div>
+    </div>
+    <ul class="reference-items description">
+    </ul>
 
-      </div>  <!-- content ending div -->
+  </div>  <!-- content ending div -->
 
-    <div class="line-separator"></div>
-    </div> <!-- main ending div -->
+<div class="line-separator"></div>
+</div> <!-- main ending div -->
 
-    <script type="text/javascript" src="../try-it-yourself.js"></script>
-  </body>
-</html>
-
+<script type="text/javascript" src="../try-it-yourself.js"></script>
