made an invisible div to indicate how many animation divs needed for the exercise

--- a/tutorial/basic-animations/basic-animation-exercise-5.html
+++ b/tutorial/basic-animations/basic-animation-exercise-5.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">1</div>
+
   <div class="heading subTitle">Create a new basic animation</div>
 
   <div class="heading exercises">Exercise 5 - Changing Colours</div>
