--- a/tutorial/parallel/parallel-exercise-1.html
+++ b/tutorial/parallel/parallel-exercise-1.html
@@ -21,6 +21,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">3</div>
+
 	<div class="heading subTitle">Parallel Animation Group</div>
 
   <div class="heading exercises">Exercise 1 - Make a Parallel Group</div>
