--- a/tutorial/timing-dictionary/timing-dictionary-exercise-1.html
+++ b/tutorial/timing-dictionary/timing-dictionary-exercise-1.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">1</div>
+
 	<div class="heading subTitle">Timing Dictionary</div>
 
   <div class="heading exercises">Exercise 1 - Start in the middle</div>
