--- a/tutorial/timing-functions/timing-function-exercise-2.html
+++ b/tutorial/timing-functions/timing-function-exercise-2.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">1</div>
+
 	<div class="heading subTitle">Timing Functions</div>
 
   <div class="heading exercises">Exercise 2 - Stepping through</div>
